ns-istio-system.yaml
# Create istio-system namespace
apiVersion: v1
kind: Namespace
metadata:
  name: istio-system
